  _    _          _   _
 | |  | |        | | (_)              
 | |__| |   ___  | |  _    ___    ___
 |  __  |  / _ \ | | | |  / _ \  / __|
 | |  | | |  __/ | | | | | (_) | \__ \
 |_|  |_|  \___| |_| |_|  \___/  |___/


Ragnarok Emulator
Developers & Contributers
- RaX
- Aeomin
- Spre
- RabidCh

--------------------------------------------------------------------------------

-Rev 25-
[2008/6/28] Spre - Went ahead and added some more sql, this will be tweaked as the features get written, this is just a *layout*
-

-Rev 24-
[2008/6/28] Spre - Went ahead and added the mob sql that I never committed to branches/
-

-Rev 23-
[2008/4/10] RabidCh - Most items are completely defined without function names.  Database is missing eggs and ammo items.
-

-Rev 22-
[2008/4/10] RabidCh - Equips completed (without function names).
-

-Rev 21-
[2008/4/6] RabidCh - Added "compound_eq_location" to itemdefinitions fields.
-

-Rev 20-
[2008/4/6] RabidCh - Erased Spre's item database entries. :)
[2008/4/6] RabidCh - Renamed for clarification, many fields of itemdefinitionsequip.
[2008/4/6] RabidCh - Added in all equipable item records.  Some items are entered in strangely... Muad_Dib needed.
-

-Rev 19-
[2008/3/21] Spre - Updated maps table.
-

-Rev 18-
[2008/3/17] Spre - Added header to changelog.
-

-Rev 17-
[2008/3/17] RabidCh - Removed stat, price_sell, and defense_rating(s) from item.sql.
-

-Rev 16-
[2008/3/16] Spre - More code Cleanup. Put item SQL in its own SQL file. This helps with size and importing.
-

-Rev 15-
[2008/3/16] Spre - Added known Mobs from aegis/yaros into the new mobs database. Please Note helios does not currently use this.
-

-Rev 14-
[2008/3/16] Spre - Modified Alpha Mob DB Code, removed some possible unneeded Rows. Changes atk1&2 around.
-

-Rev 13-
[2008/3/15] Spre - Added Magic_defnese_rating for mdef stat in equip table, Also fixed field error with element.
-

-Rev 12-
[2008/3/15] Spre - Forgot to readd The element field In ItemDefinitionsequip.
-
